--- a/Actions/RunPipeline/action.yaml
+++ b/Actions/RunPipeline/action.yaml
@@ -21,6 +21,9 @@ inputs:
     description: Project folder
     required: false
     default: '.'
+  settingsJson:
+    description: Settings from repository in compressed Json format
+    required: false
   secretsJson:
     description: Secrets from repository in compressed Json format
     required: false
