--- a/Templates/AppSource App/.github/workflows/CICD.yaml
+++ b/Templates/AppSource App/.github/workflows/CICD.yaml
@@ -89,7 +89,7 @@ jobs:
           getSecrets: ${{ steps.DetermineDeliveryTargetSecrets.outputs.Secrets }}
         run: |
           $gitHubSecrets = '${{ toJson(secrets) }}' | ConvertFrom-Json
-          $settings = $env:settings | ConvertFrom-Json
+          $settings = $env:Settings | ConvertFrom-Json
           $secrets = @{}
           $env:getSecrets.Split(',') | ForEach-Object {
             $secretName = $_
@@ -245,7 +245,7 @@ jobs:
           getSecrets: '${{ steps.envName.outputs.envName }}-AuthContext,${{ steps.envName.outputs.envName }}_AuthContext,AuthContext,${{ steps.envName.outputs.envName }}-EnvironmentName,${{ steps.envName.outputs.envName }}_EnvironmentName,EnvironmentName,projects'
         run: |
           $gitHubSecrets = '${{ toJson(secrets) }}' | ConvertFrom-Json
-          $settings = $env:settings | ConvertFrom-Json
+          $settings = $env:Settings | ConvertFrom-Json
           $secrets = @{}
           $env:getSecrets.Split(',') | ForEach-Object {
             $secretName = $_
@@ -377,7 +377,7 @@ jobs:
           getSecrets: '${{ matrix.deliveryTarget }}Context'
         run: |
           $gitHubSecrets = '${{ toJson(secrets) }}' | ConvertFrom-Json
-          $settings = $env:settings | ConvertFrom-Json
+          $settings = $env:Settings | ConvertFrom-Json
           $secrets = @{}
           $env:getSecrets.Split(',') | ForEach-Object {
             $secretName = $_
