--- a/Templates/AppSource App/.github/workflows/PublishToAppSource.yaml
+++ b/Templates/AppSource App/.github/workflows/PublishToAppSource.yaml
@@ -64,7 +64,7 @@ jobs:
           getSecrets: 'appSourceContext'
         run: |
           $gitHubSecrets = '${{ toJson(secrets) }}' | ConvertFrom-Json
-          $settings = $env:settings | ConvertFrom-Json
+          $settings = $env:Settings | ConvertFrom-Json
           $secrets = @{}
           $env:getSecrets.Split(',') | ForEach-Object {
             $secretName = $_
