--- a/Templates/Per Tenant Extension/.github/workflows/CICD.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/CICD.yaml
@@ -89,7 +89,7 @@ jobs:
           getSecrets: 'ghTokenWorkflow'
         run: |
           $gitHubSecrets = '${{ toJson(secrets) }}' | ConvertFrom-Json
-          $settings = $env:settings | ConvertFrom-Json
+          $settings = $env:Settings | ConvertFrom-Json
           $secrets = @{}
           $env:getSecrets.Split(',') | ForEach-Object {
             $secretName = $_
@@ -245,7 +245,7 @@ jobs:
           getSecrets: 'ghTokenWorkflow'
         run: |
           $gitHubSecrets = '${{ toJson(secrets) }}' | ConvertFrom-Json
-          $settings = $env:settings | ConvertFrom-Json
+          $settings = $env:Settings | ConvertFrom-Json
           $secrets = @{}
           $env:getSecrets.Split(',') | ForEach-Object {
             $secretName = $_
@@ -378,7 +378,7 @@ jobs:
           getSecrets: 'ghTokenWorkflow'
         run: |
           $gitHubSecrets = '${{ toJson(secrets) }}' | ConvertFrom-Json
-          $settings = $env:settings | ConvertFrom-Json
+          $settings = $env:Settings | ConvertFrom-Json
           $secrets = @{}
           $env:getSecrets.Split(',') | ForEach-Object {
             $secretName = $_
