--- a/.github/workflows/CleanupTempRepos.yaml
+++ b/.github/workflows/CleanupTempRepos.yaml
@@ -65,10 +65,10 @@ jobs:
               $repo = $_
               Write-Host "https://github.com/$repo"
               $repoOwner = $repo.Split('/')[0]
-              @((invoke-gh api -H "Accept: application/vnd.github+json" "/orgs/$repoOwner/packages?package_type=nuget" -silent -returnvalue -ErrorAction SilentlyContinue | ConvertFrom-Json)) | Where-Object { ($_.PSObject.Properties.Name -eq 'repository') -and ($_.repository.full_name -eq $repo) } | ForEach-Object {
+              @((invoke-gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" "/orgs/$repoOwner/packages?package_type=nuget" -silent -returnvalue -ErrorAction SilentlyContinue | ConvertFrom-Json)) | Where-Object { ($_.PSObject.Properties.Name -eq 'repository') -and ($_.repository.full_name -eq $repo) } | ForEach-Object {
                   Write-Host "- package $($_.name)"
                   # Pipe empty string into GH API --METHOD DELETE due to https://github.com/cli/cli/issues/3937
-                  '' | invoke-gh api --method DELETE -H "Accept: application/vnd.github+json" "/orgs/$repoOwner/packages/nuget/$($_.name)" --input -
+                  '' | invoke-gh api --method DELETE -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" "/orgs/$repoOwner/packages/nuget/$($_.name)" --input -
               }
               invoke-gh repo delete "https://github.com/$repo" --confirm | Out-Host
           }
