--- a/.github/workflows/Deploy.yaml
+++ b/.github/workflows/Deploy.yaml
@@ -27,15 +27,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: CheckUser
-        run: |
-          $threeMusketeers = @("freddydk", "aholstrup1", "mazhelez")
-          if ("$ENV:GITHUB_REPOSITORY" -eq "microsoft/AL-Go" -and "$ENV:GITHUB_ACTOR" -notin $threeMusketeers) {
-            Write-Host "::Error::You cannot run deploy and collect in the microsoft/AL-Go repo"
-            exit 1
-          }
-
       - name: Deploy
+        environment: production
         env:
           branch: ${{ github.event.inputs.branch }}
           copyToMain: ${{ github.event.inputs.copyToMain }}
